--- a/src/app.html
+++ b/src/app.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="/favicon.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-		%svelte.head%
-	</head>
-	<body>
-		%svelte.body%
-	</body>
+<head>
+	<meta charset="utf-8" />
+	<link rel="icon" href="/favicon.png" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+	%sveltekit.head%
+</head>
+
+<body>
+	%sveltekit.body%
+</body>
+
 </html>
