fix apache ubuntu logo

--- a/static/index.htm/index.htm/index.htm/index.html
+++ b/static/index.htm/index.htm/index.htm/index.html
@@ -194,7 +194,7 @@
 	<body>
 		<div class="main_page">
 			<div class="page_header floating_element">
-				<img src="/icons/ubuntu-logo.png" alt="Ubuntu Logo" class="floating_element" />
+				<img src="/apache/ubuntu-logo.png" alt="Ubuntu Logo" class="floating_element" />
 				<span class="floating_element"> Apache2 Ubuntu Default Page </span>
 			</div>
 			<!--      <div class="table_of_contents floating_element">
