fix ibm http server

--- a/static/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.html
+++ b/static/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.html
@@ -16,42 +16,60 @@
 		<title>IBM HTTP Server</title>
 
 		<script language="JavaScript">
-			document.write('<link rel="stylesheet" href="http_server_styles.css">')
+			document.write('<link rel="stylesheet" href="/ibm-http-server/http_server_styles.css">')
 		</script>
 
-		<link rel="shortcut icon" href="./images/ihs/favicon.ico" type="image/vnd.microsft.icon" />
+		<link rel="shortcut icon" href="./favicon.ico" type="image/vnd.microsft.icon" />
 	</head>
 
-	<body width="778" height="556" background="images/ihs/background.gif" resize="no" scroll="no">
+	<body
+		width="778"
+		height="556"
+		background="/ibm-http-server/background.gif"
+		resize="no"
+		scroll="no"
+	>
 		<tr>
 			<td>
-				<img src="images/ihs/odot.gif" alt="" width="1" height="155" /><br />
+				<img src="/ibm-http-server/odot.gif" alt="" width="1" height="155" /><br />
 
 				<table class="foreground" align="center" role="presentation">
 					<tr valign="top">
-						<td><img src="images/ihs/odot.gif" alt="" width="1" height="60" /></td>
+						<td><img src="/ibm-http-server/odot.gif" alt="" width="1" height="60" /></td>
 					</tr>
 
 					<tr align="left" valign="top" role="navigation">
-						<td><img src="images/ihs/odot.gif" alt="" width="46" height="1" /></td>
+						<td><img src="/ibm-http-server/odot.gif" alt="" width="46" height="1" /></td>
 
 						<td align="center">
 							<a href="http://www-01.ibm.com/software/webservers/httpservers/library/">
-								<img src="images/ihs/help.gif" alt="" width="22" height="20" border="0" /><br />
+								<img
+									src="/ibm-http-server/help.gif"
+									alt=""
+									width="22"
+									height="20"
+									border="0"
+								/><br />
 								Information Center</a
 							>
 						</td>
 
 						<td align="center">
 							<a href="http://www-306.ibm.com/software/webservers/httpservers/support/">
-								<img src="images/ihs/support.gif" alt="" width="19" height="20" border="0" /><br />
+								<img
+									src="/ibm-http-server/support.gif"
+									alt=""
+									width="19"
+									height="20"
+									border="0"
+								/><br />
 								Support</a
 							>
 						</td>
 
 						<td align="center"></td>
 
-						<td><img src="images/ihs/odot.gif" alt="" width="49" height="1" /></td>
+						<td><img src="/ibm-http-server/odot.gif" alt="" width="49" height="1" /></td>
 					</tr>
 					<!--<tr valign="top">
                     <td>&nbsp;</td>
