fix jetty banner

--- a/static/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.html
+++ b/static/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="Cache-Control" content="no-cache,no-store" />
 	</head>
 	<body>
-		<a href="http://jetty.mortbay.org"><img src="jetty_banner.gif" /></a>
+		<a href="http://jetty.mortbay.org"><img src="/jetty_banner.gif" /></a>
 		<h1>Welcome to Jetty 9 on Debian</h1>
 
 		<p align="justify">
