--- a/static/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.html
+++ b/static/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.html
@@ -1,1 +1,269 @@
-i don't have any more sorry
+<html>
+	<head>
+		<meta http-equiv="content-type" content="text/html; charset=windows-1252" />
+		<title>Welcome to matdoes.dev site</title>
+	</head>
+
+	<body background="/raq3/bkgnd1.gif" bgcolor="#FFFFFF">
+		<p></p>
+		<table border="0" width="704">
+			<tbody>
+				<tr>
+					<td width="145" valign="TOP" rowspan="2">
+						<img src="/raq3/spacer1.gif" width="4" height="58" align="BOTTOM" border="0" /><br />
+						<img
+							src="/raq3/p_nav_dots.gif"
+							width="120"
+							height="92"
+							align="BOTTOM"
+							border="0"
+						/><br />
+						<img
+							src="/raq3/p_nav_dots.gif"
+							width="120"
+							height="92"
+							align="BOTTOM"
+							border="0"
+						/><br />
+						<img
+							src="/raq3/p_nav_dots.gif"
+							width="120"
+							height="92"
+							align="BOTTOM"
+							border="0"
+						/><br />
+						<img src="/raq3/p_nav_dots.gif" width="120" height="92" align="BOTTOM" border="0" />
+					</td>
+					<td nowrap="nowrap" height="43" valign="TOP">
+						<p align="CENTER">
+							<font size="5" color="#FFFFFF" face="HELVETICA, ARIAL"
+								><b>Welcome to the Web Site of matdoes.dev</b></font
+							>
+						</p>
+					</td>
+				</tr>
+				<tr>
+					<td width="559" height="368" valign="TOP">
+						<table border="0" width="551">
+							<tbody>
+								<tr>
+									<td height="22" valign="TOP" colspan="2">
+										<p align="CENTER">
+											<font face="Helvetica, Arial"
+												><b
+													>This page is a place holder for the home page of your own web site.</b
+												></font
+											>
+										</p>
+									</td>
+								</tr>
+								<tr>
+									<td width="277" height="144" valign="TOP">
+										<hr align="LEFT" width="90%" />
+
+										<table border="0" width="260">
+											<tbody>
+												<tr>
+													<td width="260" height="87">
+														<font size="4" color="#339933" face="Helvetica, Arial"
+															><b>Personalize Your Home Page<br /> </b></font
+														><font size="2" face="Helvetica, Arial"
+															><br />
+															Use your favorite FTP application to move your website to the web
+															server.<br />
+															<br />
+															For an explanation about how to use an FTP application to transfer
+															content to your server, please </font
+														><a href="/raq3/.cobalt/help/ftpSite.html"
+															><font size="2" face="Helvetica, Arial">click here</font></a
+														><font size="2" face="Helvetica, Arial">.</font>
+													</td>
+												</tr>
+												<tr>
+													<td width="260">&nbsp;</td>
+												</tr>
+												<tr>
+													<td width="260">
+														<table border="0" width="252">
+															<tbody>
+																<tr>
+																	<td width="49">
+																		<img
+																			src="/raq3/hint3_en.gif"
+																			width="37"
+																			height="9"
+																			align="BOTTOM"
+																			border="0"
+																		/>
+																	</td>
+																	<td width="203">
+																		<font size="1" face="Helvetica, Arial"
+																			>Be certain the name of the file for your new home page is:
+																			<b>index.html</b></font
+																		>
+																	</td>
+																</tr>
+															</tbody>
+														</table>
+
+														<br /><font size="2" face="Helvetica, Arial">
+															Additionally, if your site has been enabled to do so, you can use
+															Microsoft Frontpage to replace or edit this page.
+														</font>
+														<p>
+															<font size="2" face="Helvetica, Arial">
+																When Frontpage Server Extensions are enabled a Frontpage user named
+																<i>webmaster</i> is created with a password specified by the RaQ
+																administrator. Be sure to open the site <i>Root Web</i> as the user
+																<i>webmaster</i>. Other Frontpage user accounts for the site
+																<i>Root Web</i> may be managed using the Frontpage client.
+																<i>User Webs</i> can be accessed using user login names and their
+																system passwords.
+															</font>
+														</p>
+														<table border="0" width="252"></table>
+													</td>
+												</tr>
+											</tbody>
+										</table>
+									</td>
+									<td width="286" height="365" valign="MIDDLE">
+										<p align="CENTER">
+											<img
+												src="/raq3/RaQ_stack.jpg"
+												align="MIDDLE"
+												border="0"
+												width="280"
+												height="362"
+											/>
+										</p>
+									</td>
+								</tr>
+								<tr>
+									<td width="277" height="159" valign="TOP">
+										<hr align="LEFT" width="90%" />
+
+										<table border="0" width="260">
+											<tbody>
+												<tr>
+													<td>
+														<font size="4" color="#339933" face="Helvetica, Arial"
+															><b
+																>Site Management Access<br />
+																<br /> </b></font
+														><font size="2" face="Helvetica, Arial"
+															>Site administrators use the URL:<br /> </font
+														><a href="http://matdoes.dev/siteadmin/"
+															><font size="2" face="Helvetica, Arial"
+																>http://matdoes.dev/siteadmin/<br />
+																<br /> </font></a
+														><font size="2" face="Helvetica, Arial"
+															>Once you enter this URL, you will be prompted for the site
+															administrator's user name and password which your hosting company
+															supplied to you.</font
+														>
+													</td>
+												</tr>
+												<tr>
+													<td height="12">&nbsp;</td>
+												</tr>
+												<tr>
+													<td>
+														<table border="0" width="253">
+															<tbody>
+																<tr>
+																	<td width="49">
+																		<img
+																			src="/raq3/hint3_en.gif"
+																			width="37"
+																			height="9"
+																			align="BOTTOM"
+																			border="0"
+																		/>
+																	</td>
+																	<td width="204">
+																		<font size="1" face="Helvetica, Arial"
+																			>We recommend that you bookmark this site so that it is easy
+																			to access in the future.</font
+																		>
+																	</td>
+																</tr>
+															</tbody>
+														</table>
+													</td>
+												</tr>
+											</tbody>
+										</table>
+									</td>
+									<td width="274" height="159" valign="TOP">
+										<hr align="LEFT" width="90%" />
+
+										<table border="0" width="260">
+											<tbody>
+												<tr>
+													<td>
+														<font size="4" color="#339933" face="Helvetica, Arial"
+															><b
+																>Personal Account Management<br />
+																<br /> </b></font
+														><font size="2" face="Helvetica, Arial"
+															>Users manage their profile at the URL: </font
+														><a href="https://matdoes.dev/personal/"
+															><font size="2" face="Helvetica, Arial"
+																>http://matdoes.dev/personal/<br />
+																<br /> </font></a
+														><font size="2" face="Helvetica, Arial"
+															>Individual users have their own web sites at the URL:
+															http://matdoes.dev/users/&lt;username&gt;/</font
+														>
+													</td>
+												</tr>
+												<tr>
+													<td>&nbsp;</td>
+												</tr>
+												<tr>
+													<td>
+														<table border="0" width="253">
+															<tbody>
+																<tr>
+																	<td width="49">
+																		<img
+																			src="/raq3/hint3_en.gif"
+																			width="37"
+																			height="9"
+																			align="BOTTOM"
+																			border="0"
+																		/>
+																	</td>
+																	<td width="204">
+																		<font size="1" face="Helvetica, Arial"
+																			>We recommend that the system administrator inform each of the
+																			registered users about maintaining their personal
+																			profiles.</font
+																		>
+																	</td>
+																</tr>
+															</tbody>
+														</table>
+													</td>
+												</tr>
+											</tbody>
+										</table>
+									</td>
+								</tr>
+								<tr>
+									<td width="277" height="10">
+										<hr align="LEFT" width="90%" />
+									</td>
+									<td width="274" height="10">
+										<hr align="LEFT" width="90%" />
+									</td>
+								</tr>
+							</tbody>
+						</table>
+					</td>
+				</tr>
+			</tbody>
+		</table>
+	</body>
+</html>
