move .cobalt to root

--- a/static/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.html
+++ b/static/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.htm/index.html
@@ -74,7 +74,7 @@
 															<br />
 															For an explanation about how to use an FTP application to transfer
 															content to your server, please </font
-														><a href="/raq3/.cobalt/help/ftpSite.html"
+														><a href="/.cobalt/help/ftpSite.html"
 															><font size="2" face="Helvetica, Arial">click here</font></a
 														><font size="2" face="Helvetica, Arial">.</font>
 													</td>
